cluster/sandbox/wordpress/core/wordpress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-core
  labels:
    app: wordpress-core
spec:
  selector:
    matchLabels:
      app: wordpress-core
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress-core
    spec:
      containers:
        - image: wordpress:6.5.3-apache
          name: wordpress
          ports:
            - containerPort: 80
              name: wordpress
          volumeMounts:
            - name: wordpress-pv
              mountPath: /var/www/html/
      volumes:
        - name: wordpress-pv
          persistentVolumeClaim:
            claimName: wordpress-claim
