cluster/sandbox/wordpress/core/wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-core
  labels:
    app: wordpress-core
    kubernetes.io/name: wordpress-core
spec:
  selector:
    app: wordpress-core
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
